syntax = "proto3";

package product;

service ProductsService {
  rpc find (RequestQuery) returns (Products) {}
  rpc create (RequestBody) returns (Product) {}
}

message RequestQuery {
  string name = 1;
}

message RequestBody {
  string name = 1;
  int32 price = 2;
}

message Product {
  string id = 1;
  string name = 2;
  int32 price = 3;
}

message Products {
  repeated Product products = 1;
}